logs/streamlit_8501.log
nohup: ignoring input

Collecting usage statistics. To deactivate, set browser.gatherUsageStats to false.


  You can now view your Streamlit app in your browser.

  Local URL: http://localhost:8501
  Network URL: http://147.46.3.215:8501
  External URL: http://147.46.3.215:8501

2025-08-16 18:42:05.600 Uncaught app exception
Traceback (most recent call last):
  File "/home/snudh/my_streamlit_app/.venv/lib/python3.10/site-packages/streamlit/runtime/scriptrunner/script_runner.py", line 589, in _run_script
    exec(code, module.__dict__)
  File "/home/snudh/my_streamlit_app/app.py", line 13, in <module>
    from components import header, web_scraper, text_preprocessor, data_merger, eda_viewer, feature_analyzer
  File "/home/snudh/my_streamlit_app/components/feature_analyzer.py", line 90
    "저는 사과 좋아요
    ^
SyntaxError: unterminated string literal (detected at line 90)
  Stopping...
